--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             color: #0066cc;
             text-decoration: none;
         }
+
         h1 {
             text-align: center;
             font-size: 28px;
@@ -37,6 +38,7 @@
             color: #003366;
             font-weight: bold;
         }
+
         .contract-section {
             margin-bottom: 20px;
             padding: 15px;
@@ -44,6 +46,16 @@
             border-radius: 8px;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
         }
+
+        .contract-sub-section {
+            padding: 15px;
+            margin-top: -20px;
+        }
+
+        .contract-sub-section .bank-text {
+            margin: 0px;
+        }
+
         .section-title {
             font-weight: bold;
             font-size: 14px;
@@ -53,6 +65,17 @@
             border-bottom: 2px solid #003366;
             padding-bottom: 5px;
         }
+
+        .sub-section-title {
+            font-weight: bold;
+            font-size: 14px;
+            margin-top: 20px;
+            color: #e0b700;
+            text-transform: uppercase;
+            border-bottom: 2px solid #e0b700;
+            padding-bottom: 5px;
+        }
+
         .highlight {
             color: #cc0000;
         }
@@ -116,74 +139,124 @@
 
     <div class="contract-section">
         <p class="section-title">Contratado:</p>
-        <p>EUROLEMBO APOIO ADMINISTRATIVO LTDA ME, CNPJ/MF 22.155.011/0001-83, e-mail <a href="mailto:eurolembo@eurolembo.com.br">eurolembo@eurolembo.com.br</a>, com sede na Rua Ursolina Pereira de Aquino, Número 193, LOTE K 15 - Condomínio MARIA DULCE, CEP 13.331-635 - INDAIATUBA –SP. Representantes: JAQUELINE APARECIDA LEMBO ASTERITO, RG 18.019.749-6, CPF 114.643.478-24, e LEANDRO ASTERITO, RG 23.173.748-8, CPF/MF 205.389.688-42. Contato: Cel/WhatsApp 19 98271.9992.</p>
+        <p>EUROLEMBO APOIO ADMINISTRATIVO LTDA ME, CNPJ/MF 22.155.011/0001-83, e-mail <a href="mailto:eurolembo@eurolembo.com.br">eurolembo@eurolembo.com.br</a>, com sede na Rua Ursolina Pereira de Aquino, Número 193, LOTE K 15 - Condomínio MARIA DULCE, CEP 13.331-635 - INDAIATUBA –SP. Representantes: <b>JAQUELINE APARECIDA LEMBO ASTERITO</b>, RG 18.019.749-6, CPF 114.643.478-24, e <b>LEANDRO ASTERITO</b>, RG 23.173.748-8, CPF/MF 205.389.688-42. Contato: Cel/WhatsApp 19 98271.9992.</p>
     </div>
 
     <div class="contract-section">
         <p class="section-title">i.-) Da Proteção de Dados</p>
         <p><span class="important">Atenção à Lei Geral de Proteção de Dados (LGPD)</span></p>
-        <p>CONTRATADA se compromete a tratar os dados pessoais do(s) CONTRATANTE(s) e familiares obtidos em razão da presente relação contratual, conforme a Lei Geral de Proteção de Dados nº 13.709/2018 (LGPD), tais como:</p>
-        <ul>
+        <p><b>CONTRATADA</b> se compromete a tratar os dados pessoais do(s) CONTRATANTE(s) e familiares obtidos em razão da presente relação contratual, conforme a Lei Geral de Proteção de Dados nº 13.709/2018 (LGPD), tais como:</p>
+        <ol>
             <li>Endereço para correspondência;</li>
-            <li>Números de telefone e e-mails particulares;</li>
-            <li>Informações contidas em documentos pessoais;</li>
-            <li>Informações sigilosas em certidões e registros;</li>
-            <li>Informações de processos judiciais;</li>
-            <li>Certificado de antecedentes criminais.</li>
-        </ul>
+            <li>Números de telefone e endereço de correio eletrônico (E-mails) particulares e páginas em redes sociais ou em aplicativos (WhatsApp, Telegram e similares);</li>
+            <li>Informações contidas em RG, CPF/MF, CNH, Passaportes;</li>
+            <li>Informações pessoais sensíveis sigilosas em certidões nos registros civis, de igrejas dicoceses, arquivos de Estado ou conservatórias e Registro di Stato Civile dos Comunes/Prefeitura na Itália;</li>
+            <li>Informações contidas em autos de processos judiciais que tramitam ou tramitaram nas Varas de Família sob segredo de justiça;</li>
+            <li>Informações contidas ao certificado de antecedente criminal Federal exigido pelo Comune que regularizará Cidadania Italiana de CADA Requerente.</li>
+        </ol>
     </div>
 
     <div class="contract-section">
-        <p class="section-title">ii.-) Compromisso com Sigilo por Cada Contratante</p>
-        <p>Da não divulgação do local/nome do comune onde regularizada a cidadania</p>
-        <ul>
-            <li>CADA Requerente se compromete a não divulgar o local e o nome do Comune onde sua cidadania Italiana será regularizada.</li>
-            <li>Isso é para evitar o excesso de residentes e a possível prejudicialidade dos trabalhos da CONTRATADA.</li>
-        </ul>
+        <p class="section-title">ii.-) COMPROMISSO COM SIGILIO POR CADA CONTRATANTE
+            DA NÃO DIVULGAÇÃO DO LOCAL/NOME DO COMUNE
+            ONDE REGULARIZADAA CIDADANIA</p>
+        <ol>
+            <li>Em Contrapartida, CADA <b>Requerente se compromete com a Não divulgação do local, o nome do Comune de CELICO</b> que terá sua cidadania Italiana Regularizada em qualquer modo ou meio de comunicação;</li>
+            <li>Tudo, para evitar excesso de residências ao local, onde restará prejudicados os Trabalhos da contratada EUROLEMBO.</li>
+        </ol>
     </div>
 
     <div class="contract-section">
         <p class="section-title">iii.-) Objeto</p>
-        <p>Cidadania Italiana com Ida Pessoal</p>
-        <ul>
-            <li>Local: Cosenza - Ida 1 vez</li>
-            <li>Permanência de 30 a 40 dias (ATÉ finalização da cidadania)</li>
-            <li>Análise de erros de ortografia obrigatória</li>
-            <li>Expedição de contratos no Brasil e Itália, incluindo estadia</li>
-            <li>Certificado de cidadania será obtido na Itália, exceto se o Consulado no Brasil ultrapassar 30 dias para responder ao e-mail/PEC.</li>
-            <li>Não inclusa alimentação e passagem aérea.</li>
-            <li>Após retorno com o certificado, o(s) requerente(s) será(ão) orientado(s) sobre como transferir o endereço para o consulado Italiano (AIRE).</li>
-            <li>Para filhos menores, encaminhamento ao AIRE e inclusão no mesmo ato.</li>
-            <li>Orientação sobre agendamento e retirada do passaporte italiano após registro.</li>
-            <li>RG e passaporte italiano não serão emitidos na Itália.</li>
-        </ul>
+        <p><span class="important">Cidadania Italiana com Ida Pessoal</span></p>
+        <ol>
+            <li>Local Cosenza - Ida 1 vez;</li>
+            <li><u>Permanência 30 a 40 dias (ATÉ final cidadania);</u></li>
+            <li>Obrigatória Análise de erros de ortografia;</li>
+            <li>Expedições contratos Brasil e Itália e Inclusa Estadia;</li>
+            <li>Sairá da Itália com Certificado Cidadania, <b>EXCETO</b> se o Consulado no BRASIL ULTRAPASSAR 30 dias para responder E-MAL/PEC ao processo para devida finalização. Desta forma, o requerente sairá do Comune Sem o certificado de cidadania e aguardará em sua residência de documento Original pelo correio;</li>
+            <li>Não inclusa alimentação. Não inclusa passagem aérea;</li>
+            <li>Quando Voltar Da Itália Com Certificado De Cidadania, O(s) Requerente(s) Será(ão) <b>orientado(s)</b> como expedir a transferência do endereço da Itália para o local de residência correspondente ao consulado Italiano (AIRE);</li>
+            <li>SE FILHOS Menores, encaminhamento ato AIRE e filhos ao mesmo Ato;</li>
+            <li>APÓS devido registro pelo consulado italiano, será <b>orientado</b> como agendar e buscar seu passaporte italiano e dos filhos;</li>
+            <li>NÃO serão expedidos RG nem passaporte italiano na Itália. Somente no local de residência de origem do(s) Contratante(s).</li>
+        </ol>
     </div>
 
     <div class="contract-section">
         <p class="section-title">iv.-) Das Quitações ao Processo na Itália</p>
+        <ol>
+            <li>SE “Transfer” ida e volta em Lamezia Terme 160 Euro;</li>
+            <li>SE “Transfer” ida e volta de Cosenza – GRATUITO;</li>
+            <li><u>Se acompanhantes, por CADA MAIOR 12 anos – 37 EUROS DIÁRIA.</u></li>
+        </ol>
+        <p><span class="important">Pagamento CIDADANIA ITALIANO A CADA MAIOR DE 18 ANOS 4. 000 EUROS</span></p>
         <ul>
-            <li>Transfer ida e volta em Lamezia Terme: 160 Euros</li>
-            <li>Transfer ida e volta de Cosenza: Gratuito</li>
-            <li>Cada acompanhante maior de 12 anos: 37 Euros por diária</li>
-            <li>Pagamento da cidadania italiana para maiores de 18 anos: 4.000 Euros</li>
-            <li>Até 30 dias antes da viagem: 1.500 Euros - Em conta bancária no Brasil</li>
-            <li>Quitação na Itália após expedição da residência: 2.500 Euros - Totalmente em dinheiro ou transferência.</li>
+            <li><b>ATÉ 30 DIAS ANTES DA VIAGEM – 1.500 EUROS - Em Conta bancária no Brasil - por Cotação Euro Turismo Japão/Banco do Brasil.</b></li>
+            <li><b>QUITAR NA ITÁLIA APÓS EXPEDIÇÃO RESIDÊNCIA - 2.500,00 EUROS – Totalmente em dinheiro OU transferência.</b></li>
         </ul>
     </div>
 
     <div class="contract-section">
         <p class="section-title">v.-) Considerações</p>
-        <ul>
-            <li>As partes declaram estar de acordo com todas as cláusulas mencionadas neste contrato.</li>
-            <li>Possíveis ajustes poderão ser realizados de acordo com a necessidade.</li>
-        </ul>
+        <ol>
+            <li>Desde já devem as <b>REQUERENTES (e SE Filho/a SE MAIOR na época)</b> estarem cientes que APÓS finalização da cidadania Italiana, cada um deve Obrigatoriamente:</li>
+            <ol type="a">
+                <li>possuir Passaporte Brasileiro Dentro da validade a terminar mínimo (01) UMAno Após data do recebimento do certificado de cidadania em seu nome.</li>
+                <li>Também em <b>SEU PRÓPRIO NOME</b> comprovante de endereço, como <b>ÚNICAS Opções</b> determinado por TODOS Consulado Italianos no Brasil: água, luz, telefone fixo, telefone celular, gás. Pode ser comprovante da mesma residência em nome de mais um requerente.</li>
+            </ol>
+        </ol>
     </div>
 
     <div class="contract-section">
-        <p class="section-title">xv.-) Do Foro</p>
-        <ul>
-            <li>Eleição do foro de Indaiatuba-SP para resolver quaisquer dúvidas ou questionamentos que possam surgir deste contrato.</li>
-        </ul>
+        <p class="section-title">v.-) Dos DOCUMENTOS OBRIGATÓRIOS( 1 a 8 COMUNS a Ludovina e Irmão/s)</p>
+        <div class="contract-sub-section">
+            <p class="sub-section-title">xi.-) Dados bancários:</p>
+            <p class="bank-text">Banco ITAÚ (Banco nº. 341)</p>
+            <p class="bank-text">AGÊNCIA: 9697</p>
+            <p class="bank-text">CONTA CORRENTE: 30.723-0</p>
+            <p class="bank-text">Titular: Jaqueline Aparecida Lembo Asterito E/OU Leandro Asterito</p>
+            <p class="bank-text">CPF/MF: 114.643.478-24</p>
+            <p class="bank-text">OU</p>
+            <p class="bank-text">Chave PIX: CPF 205.389.688-42 - Leandro Asterito</p>
+        </div>
+        <div class="contract-sub-section">
+            <p class="sub-section-title">xii.-) DAS RESPONSABILIDADES DOS CONTRATADOS</p>
+            <ol>
+                <li>Os contratados assumem compromisso de bem executar as atribuições descritas no presente instrumento contratual, adotando, para esse efeito, todo o cuidado e diligência recomendados pela boa técnica profissional, formulando os requerimentos e adotando as providências que, em cada caso, se mostrem adequadas e oportunas à proteção dos interesses do(s) cliente(s).</li>
+            </ol>
+        </div>
+        <div class="contract-sub-section">
+            <p class="sub-section-title">xiii.-) DA RESPONSABILIDADES DOS CONTRATANTES</p>
+            <ol>
+                <li>As partes contratantes dentro da tramitação do Processo se obriga(m) a colocar à disposição informações e documentos necessários à prática dos atos dos interessados, inclusive indicando informações necessárias, bem como responsabilizando-se pela veracidade do conteúdo;</li>
+                <li>Em especial Se necessário demais certidões além das já dispostos somente à retificações Se necessário;</li>
+                <li>As partes de comprometem a quitar os trabalhos prestados e necessários ao processo: inteiros teores, traduções, apostilas em até <b>02 (dois)dias úteis Após solicitado por email</b>, caso que não o fazendo, pode a parte contratada emitir boleto bancário e encaminhá-lo a protesto oportunamente, sem prejuízo de outras medias cabíveis, caso persista a inadimplência voluntária.</li>
+            </ol>
+        </div>
+        <div class="contract-sub-section">
+            <p class="sub-section-title">xiv.-) DA EXTINÇÃO DAS OBRIGAÇÕES E PRESTAÇÃO DE CONTAS</p>
+            <ol>
+                <li>A extinção do presente dar-se-á com cumprimento das obrigações nele estipuladas e com quitações estipuladas e aceitas pela partes.</li>
+                <li>A prestação de contas de valores recebidos e despesas realizadas será feita de forma mercantil.</li>
+                <li>Na hipótese de desistência imotivada a parte que desistir deverá comunicar a outra por escrito com até 10 dias de antecedência e arcar com multa contratual de 30% (Trinta por cento) calculada sobre o valor do saldo de honorários “em aberto” quitados até momento da comunicação.</li>
+                <li>Aplica-se a multa por desistência imotivada, correspondente aos trabalhos prestados e rompimentos com terceiros envolvidos nas prestações dos trabalhos com expedições de documentos (cartórios, tradutores, apostila, e/ ou escritório na Itália, se for o caso) havidas(os) em razão dos trabalhos já iniciados pela empresa contratada antes da comunicação da desistência.</li>
+                <li>As partes concordam que os valores pagos a título de honorários até o momento da comunicação da desistência não serão devolvidos pela empresa contratada e que os mesmos:
+                </li>
+                <dl>
+                    <dt>5.1.-) não englobam valores gastos com custas, taxas, selos, emolumentos e despesas (correios, cartórios, traduções, apostila) realizadas em razão dos trabalhos contratados, os quais devem ser quitados ao serem contratados;</dt>
+                </dl>
+                <li>Para recebimento de valores não pagos pelo contratante a qualquer título, a empresa contratada poderá emitir boleto bancário e encaminhá-lo a protesto oportunamente, sem prejuízo de outras medias cabíveis, caso persista a inadimplência voluntária.</li>
+            </ol>
+        </div>
+        <div class="contract-sub-section">
+            <p class="sub-section-title">xv.-) DO FORO</p>
+            <ol>
+                <li>Elegem as partes, com a finalidade de dirimir dúvidas ou questionamentos que tenham origem no presente contrato e que não possa ser resolvido amigavelmente, o foro da Comarca de <b>Indaiatuba–SP.</b></li>
+                <li>Como pacto, firmam o presente instrumento emitido via e.mail, que com concordância das partes, ressalvadas as observações em próprio e.mail, firmado está, sem assinatura de qualquer espécie Neste Instrumento, tampouco, reconhecimento de firma em cartório de caráter Público.</li>
+                <li>A presente assistência e quitações se dará tão somente ao presente contratante, ora requerente da sua cidadania Italiana e de seus filhos menores. Caso outros irmãs acessem contrato, será para outros trabalhos e outras novas certidões, o que portanto, incidirá novo valor a título de assessoria/contraprestações.</li>
+            </ol>
+        </div>
     </div>
 
     <div class="contract-section">
