--- a/index.html
+++ b/index.html
@@ -18,6 +18,29 @@
             text-align: center;
             margin: 20px 0;
         }
+
+        .footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        .footer div {
+            width: 30%;
+        }
+
+        .link-site {
+            background-color: #e0b700;
+            padding-block: 20px;
+        }
+
+        .link-site p a {
+            color: #000;
+            text-decoration: none;
+            font-size: 14px;
+        }
+
         .header img, .footer img {
             max-width: 150px;
             height: auto;
@@ -107,6 +130,25 @@
             .section-title {
                 font-size: 12px;
             }
+
+            .footer {
+                flex-direction: column;
+            }
+
+            .footer div {
+                width: 100%;
+            }
+
+            .link-site {
+                background-color: #e0b700;
+                padding-block: 20px;
+            }
+
+            .link-site p a {
+                color: #000;
+                text-decoration: none;
+                font-size: 12px;
+            }
         }
         @media (max-width: 480px) {
             .header img, .footer img {
@@ -134,7 +176,7 @@
 
     <div class="contract-section">
         <p class="section-title">Contratante(s):</p>
-        <p>LUDOVINA LOPES TORRES NETA, RG 7452739, CPF/MF 074.972.276-75, Passaporte FR 627113, Profissão Empresária, Tel/WhatsApp 11969086321, e-mail <a href="mailto:ludovina@300f.com.br">ludovina@300f.com.br</a>, Telefone 11 93284-6300, residente e domiciliada na Rua Expedicionário Holz, 180, bairro Atiradores, JOINVILLE /SC, CEP 89.203-085. O/A(s) presente(s) CONTRATANTE(s) contrata(m) neste ato a empresa abaixo qualificada como CONTRATADA para os trabalhos de regularização de sua(s) cidadania(s) Italiana(s) na modalidade ADMINISTRATIVA (PESSOALMENTE NA ITÁLIA) com chegada prevista para 14/07/2024 e permanência de 35 a 40 dias (ATÉ finalização da cidadania), com saída prevista até 20/08/2024.</p>
+        <p>xxxxxxx, RG xxxxxxx, CPF/MF xxxxxxxxxx, Passaporte xxxxxxx, Profissão xxxxxxx, Tel/WhatsApp xxxxxxxx, e-mail xxxxxxxxx, Telefone xxxxxxxx, residente e domiciliada na Rua xxxxxxx, xxx, bairro xxxxxx, xxxxx /xx, CEP xxxxxxxx. O/A(s) presente(s) CONTRATANTE(s) contrata(m) neste ato a empresa abaixo qualificada como CONTRATADA para os trabalhos de regularização de sua(s) cidadania(s) Italiana(s) na modalidade ADMINISTRATIVA (PESSOALMENTE NA ITÁLIA) com chegada prevista para xx/xx/2024 e permanência de 35 a 40 dias (ATÉ finalização da cidadania), com saída prevista até xx/xx/2024.</p>
     </div>
 
     <div class="contract-section">
@@ -260,17 +302,24 @@
     </div>
 
     <div class="contract-section">
-        <p class="center">Indaiatuba, 15 de maio de 2024</p>
-        <p class="center">LUDOVINA LOPES TORRES NETA - Contratante</p>
+        <p class="center">Indaiatuba, xx de xxxx de 2024</p>
+        <p class="center">xxxx - Contratante</p>
         <p class="center">EUROLEMBO APOIO ADMINISTRATIVO LTDA ME - Contratada</p>
     </div>
 
     <div class="footer">
-        <img src="logo.png" alt="Logo da Empresa"> <!-- Substitua 'logo.png' pelo caminho do seu logo -->
-        <p>Rua Antonio Pedroso, 34, Jardim Olinda<br>
-        CEP 13.335-550, Indaiatuba/SP<br>
-        (19)98271-9992/(11)99534-0551<br>
-        <a href="mailto:eurolembo@eurolembo.com.br">eurolembo@eurolembo.com.br</a></p>
+        <div>
+            <p>Rua Ursolina Pereira de Aquino, Número 193, LOTE K 15 - Condomínio MARIA DULCE, CEP 13.331-635 - INDAIATUBA –SP<br>
+            CEP 13.335-550, Indaiatuba/SP<br>
+            (19)98271-9992/(11)99534-0551<br>
+            <a href="mailto:eurolembo@eurolembo.com.br">eurolembo@eurolembo.com.br</a></p>
+        </div>
+        <div>
+            <img src="logo.png" alt="Logo da Empresa">
+        </div>
+        <div class="link-site">
+            <p><b><a href="https://www.eurolembo.com.br">eurolembo.com.br</a></b></p>
+        </div>
     </div>
 </body>
 </html>
