--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
             padding: 20px;
             line-height: 1.6;
             color: #333;
-            background-color: #eaeaea;
+            background-color: #fff;
         }
+
         .header, .footer {
             text-align: center;
             margin: 20px 0;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
         }
 
         .footer {
@@ -65,9 +73,6 @@
         .contract-section {
             margin-bottom: 20px;
             padding: 15px;
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
         }
 
         .contract-sub-section {
@@ -165,11 +170,11 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.png" alt="Logo da Empresa"> <!-- Substitua 'logo.png' pelo caminho do seu logo -->
         <p>Rua Antonio Pedroso, 34, Jardim Olinda<br>
         CEP 13.335-550, Indaiatuba/SP<br>
         (19)98271-9992/(11)99534-0551<br>
         <a href="mailto:eurolembo@eurolembo.com.br">eurolembo@eurolembo.com.br</a></p>
+        <img src="logo.png" alt="Logo da Empresa">
     </div>
 
     <h1>CONTRATO DE PRESTAÇÃO DE SERVIÇOS</h1>
