--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             background-color: #fff;
         }
 
+        p, li, span {
+            margin-bottom: 5px;
+            line-height: 200%;
+        }
+
         .header, .footer {
             text-align: center;
             margin: 20px 0;
@@ -22,7 +27,7 @@
 
         .header {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end;
             align-items: center;
             flex-wrap: wrap;
         }
@@ -170,10 +175,6 @@
 </head>
 <body>
     <div class="header">
-        <p>Rua Antonio Pedroso, 34, Jardim Olinda<br>
-        CEP 13.335-550, Indaiatuba/SP<br>
-        (19)98271-9992/(11)99534-0551<br>
-        <a href="mailto:eurolembo@eurolembo.com.br">eurolembo@eurolembo.com.br</a></p>
         <img src="logo.png" alt="Logo da Empresa">
     </div>
 
